[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/cards/CardBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/battle/BattleCard.gd" type="Script" id=2]

[node name="BattleCard" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="CardBase" parent="." instance=ExtResource( 1 )]

[connection signal="button_down" from="." to="." method="_on_BattleCard_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_BattleCard_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_BattleCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BattleCard_mouse_exited"]
